# book-manager

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
book_manager/: auth.py  config.py  provider.py  render.py
